--- a/source/assets/stylesheets/blocks/_parallax.scss
+++ b/source/assets/stylesheets/blocks/_parallax.scss
@@ -5,53 +5,74 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 .parallax {
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-perspective: 30px;
-  perspective: 30px;
-  -webkit-perspective-origin-x: 100%;
-  perspective-origin-x: 100%;
+  @media only screen and (min-width: $screen-md-min) {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 30px;
+    perspective: 30px;
+    -webkit-perspective-origin-x: 100%;
+    perspective-origin-x: 100%;
+  }
 }
 .parallax__group {
-  position: relative;
-  height: 100vh;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  // transform: translate3d(700px, 0, -800px) rotateY(30deg);
+  @media only screen and (min-width: $screen-md-min) {
+    position: relative;
+    height: 100vh;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    // transform: translate3d(700px, 0, -800px) rotateY(30deg);
+  }
 }
 .parallax__layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-transform-origin-x: 100%;
-  transform-origin-x: 100%;
+  @media only screen and (min-width: $screen-md-min) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transform-origin-x: 100%;
+    transform-origin-x: 100%;
+  }
 }
 // 1 + (translateZ * -1) / 300
 .parallax__layer--0 {
-  // 1 + (90 * -1) / 300
-  transform: translate3d(0,0,0) scale(1);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,0) scale(1);
+  }
 }
 .parallax__layer--1 {
-  transform: translate3d(0,0,-6px) scale(1.2);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-6px) scale(1.2);
+  }
 }
 .parallax__layer--2 {
-  transform: translate3d(0,0,-12px) scale(1.4);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-12px) scale(1.4);
+  }
 }
 .parallax__layer--3 {
-  transform: translate3d(0,0,-18px) scale(1.6);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-18px) scale(1.6);
+  }
 }
 .parallax__layer--4 {
-  transform: translate3d(0,0,-24px) scale(1.8);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-24px) scale(1.8);
+  }
 }
 .parallax__layer--5 {
-  transform: translate3d(0,0,-36px) scale(2.2);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-36px) scale(2.2);
+  }
 }
 .parallax__layer--6 {
-  transform: translate3d(0,0,-48px) scale(2.6);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-48px) scale(2.6);
+  }
 }
 .parallax__layer--7 {
-  transform: translate3d(0,0,-60px) scale(3);
+  @media only screen and (min-width: $screen-md-min) {
+    transform: translate3d(0,0,-60px) scale(3);
+  }
 }
